# CanalDeBolivia

./: .canal.h.kate-swp  .gitignore  CMakeLists.txt  CanalConfig.txt  CanalDeBolivia  Makefile  README.md  canal.c  canal.h  main.c  rasp  ship.c  ship.h  shipGenerator.h  test  test.c  test_sdl2.c  wifi.c  wifi.h
.cmake/api/v1/reply/: cache-v2-01ec9452c997e168117f.json  cache-v2-649b4579306214218321.json  cache-v2-66724cb632f35963e395.json  cmakeFiles-v1-063d63e6b0816c778b9d.json  cmakeFiles-v1-3ce9a5077175da3105fd.json  cmakeFiles-v1-c075d7524ea3ad3df9b4.json  codemodel-v2-02456ab6955b15f3f522.json  codemodel-v2-1fa77ebaffbedb5af1ce.json  codemodel-v2-4062b83dd05a11b2bf84.json  codemodel-v2-521af73d3f87c3f80dd1.json  index-2024-10-13T09-02-22-0613.json  index-2024-10-13T19-17-24-0246.json  index-2024-10-14T01-40-00-0599.json  index-2024-10-14T11-23-21-0041.json  target-SchedulingShips-3c37877b26a05e1d4753.json  target-SchedulingShips-Debug-4bfebd82b56c046ae439.json  target-SchedulingShips-Debug-fc48715977c35ffb2bc6.json  target-SchedulingShips-e7eeff0e33a09db7c427.json
CEthreads/: CEmutex_destroy.c  CEmutex_init.c  CEmutex_lock.c  CEmutex_unlock.c  CEthread.h  CEthread_create.c  CEthread_end.c  CEthread_join.c  Makefile  main.c
Canal/: Canal.h  Equidad.c  Letrero.c  Tico.c
Canal/Queue_functions/: Queue
New Folder/: rasp  rasp.c
Scheduling/: CMakeLists.txt  fcfs.c  main.c  priority.c  real_time.c  round_robin.c  scheduling.c  scheduling.h  sjf.c
ships/: ship.h  shipGenerator.c
